--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,14 @@
     "name": "CHANGELOG",
     "short_name": "changelog",
     "start_url": "changelog.html",
-    "display": "standalone"
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#000000",
+    "icons": [
+        {
+            "src": "favicon.ico",
+            "sizes": "64x64 48x48 32x32 24x24 16x16",
+            "type": "image/x-icon"
+        }
+    ]
 }
